v1b
---

+ Fixed: Bug, der verhindert, dass Optionen gespeichert werden können

v1c
---

+ Fixed: Wenn User am Vortag noch nichts getippt haben, wird ein Abstiegspfeil angezeigt
+ Fixed: Top-10-User werden im Rang fortlaufend gezählt, auch bei Gleichstand
+ Fixed: Vize-/Europameister tippen nicht möglich
+ Added: Button für den Header (Danke an Fatman!)

v1d
---

+ Besseres Handling von gleichrangigen Nutzern

v1e
---

+ Fixed: Tageswertung Reset hat nicht funktioniert
+ Added: Bessere Weiterleitung nach Abgabe von Tipps
+ Fixed: Mod Threadinklusion hat nicht funktioniert (Ranking fehlte)
+ Anpassungen an HTML5
+ Fixed: Keine Ranking-Anzeige im Thread vor Tippbeginn

v1f
---

+ Added: JGS-Portal Mods
+ Fixed: Weiße Seite bei erstem Aufruf des Tippspiels

v1g
---

+ Fixed: Falsche Sprachvariablen

v1h
---

+ Fixed: Ein paar kleine Bugs bezüglich Escaping und SQL-Befehle

v1i
---

+ Fixed: Umlautefehler in Mannschaftsnamen

v1j
---

+ Fixed: Heute,, und Gestern,, im Front- und Backend

v1k
---

+ Added: Mod von Mr.Fisch: HM-Portal-Mod_V1.txt

v1l
---

+ Fixed: Beim Posten als Antwort wird der Threadcount erhöht

v1m
---

+ Fixed: Beim Posten als Antwort wird der Threadcount erhöht #2

v1n
---

+ Fixed: [Tageswertung] Bei negativer Different wurde +-5 statt -5 angezeigt.

v1o
---

+ Fixed: Komma fehlt nach Datum in Tabelle "nächste Spiele"
+ Fixed: Im Tab User-Tipps werden nun auch die Wörter Gestern, Heute, Morgen anstatt des Datums angezeigt