@@ -1,8 +1,5 @@
 ToDo für EM 2016:
 -----------------
-+ Weiterleitung bei Tipp-Edit zurück auf die Tippabgabe, nicht auf die Startseite
-
-
 
 
 ToDo für WM 2018:
@@ -10,3 +7,5 @@ ToDo für WM 2018:
 + Tageswertung nur bei neuen Spielergebnissen zurücksetzen; nicht um Mitternacht
 + Mehrmaliges Eintragen eines Spiels verhindern
 + HM-Portal von Mr. Fish suaber implementieren/Änderungen von mir zurückspielen/HTML5-Anpassungen/Code in vorhandene Dateien mergen
++ Nummerfelder verwenden: ACP > Ergebnis eintragen
++ Nummerfelder verwenden: Tipp eintragen/editieren
